--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "rehype-katex": "7.0.0",
     "remark-gfm": "4.0.0",
     "remark-math": "6.0.0",
+    "sass": "^1.89.2",
     "sort-package-json": "^2.10.0",
     "taze": "^0.13.8",
     "typescript": "^5.4.5",
